Increase coverage of OpenGL code (#36)
* Use xvfb-run to prevent a non-zero return code from coverage when using pytest-xvfb

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -48,10 +48,15 @@ jobs:
 
       - name: Install Coverage.py
         run: |
-          pip install pytest pytest-xvfb coverage
+          pip install pytest coverage
+
+      - name: Set environment variables
+        run: |
+          export PYOPENGL_PLATFORM=egl
+          export GDK_BACKEND=x11
 
       - name: Run tests
-        run: coverage run -m pytest
+        run: xvfb-run coverage run -m pytest
 
       - name: Report coverage
         run: coverage html
